# secup_demo

./: .gitignore  agent.md  api.md  app.md  clean_python.md  main.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: 5cc83456aa10_initial_schema.py
app/: database.py
app/core/: config.py  deps.py  security.py
app/models/: __init__.py  alert.py  driver.py  intervention.py  user.py  vehicle.py
app/routers/: alerts.py  auth.py  drivers.py  interventions.py  vehicles.py
app/schemas/: alert.py  auth.py  driver.py  intervention.py  vehicle.py
